[ENHANCEMENT] [MER-5139] Fixes color contrast accessibility issues

--- a/assets/css/bootstrap-shims.css
+++ b/assets/css/bootstrap-shims.css
@@ -375,11 +375,11 @@ li.page-item {
 }
 
 .alert-warning {
-  @apply bg-yellow-100 text-yellow-700;
+  @apply bg-yellow-100 text-Text-text-high;
 }
 
 .alert-info {
-  @apply bg-blue-50 text-blue-700;
+  @apply bg-blue-50 text-Text-text-high;
 }
 
 .alert-light {
